# fserver

./: README.md  fserver.py  hserver.py  pyproject.toml  requirements.txt
templates/: list.html  tsv.html
