[project]
name = "fserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "cachetools>=6.0.0",
    "fastapi>=0.115.12",
    "human-readable>=2.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
# Required URL for the index.
url = "https://pip.baidu-int.com/simple/"
default=true

